# svc/home-api/src/main/java/com/breathinghouse/homeapi/rooms/RoomController.java
@@ -6,12 +6,14 @@ import org.springframework.http.HttpStatus;
 import org.springframework.http.MediaType;
 import org.springframework.http.ResponseEntity;
 import org.springframework.validation.annotation.Validated;
+import org.springframework.web.bind.annotation.DeleteMapping;
 import org.springframework.web.bind.annotation.GetMapping;
 import org.springframework.web.bind.annotation.PatchMapping;
 import org.springframework.web.bind.annotation.PathVariable;
 import org.springframework.web.bind.annotation.PostMapping;
 import org.springframework.web.bind.annotation.RequestBody;
 import org.springframework.web.bind.annotation.RequestMapping;
+import org.springframework.web.bind.annotation.ResponseStatus;
 import org.springframework.web.bind.annotation.RestController;
 
 import java.net.URI;
@@ -51,5 +53,11 @@ public class RoomController {
             @PathVariable @NotBlank String roomId,
             @Valid @RequestBody UpdateRoomRequest request) {
         return roomService.updateRoom(roomId, request.toPatch());
+    }
+
+    @DeleteMapping("/rooms/{roomId}")
+    @ResponseStatus(HttpStatus.NO_CONTENT)
+    public void deleteRoom(@PathVariable @NotBlank String roomId) {
+        roomService.deleteRoom(roomId);
     }
 }
